[gd_scene load_steps=5 format=3 uid="uid://ctqujv0aqssep"]

[ext_resource type="Texture2D" uid="uid://cwsajgkrdv3im" path="res://assets/visuals/square.png" id="1_1u5is"]
[ext_resource type="Script" uid="uid://nbuvxjarrqgv" path="res://scripts/number.gd" id="2_ctckn"]

[sub_resource type="LabelSettings" id="LabelSettings_1u5is"]
font_size = 200
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ctckn"]
size = Vector2(5.07279, 26.6428)

[node name="1" type="Sprite2D"]
texture = ExtResource("1_1u5is")
script = ExtResource("2_ctckn")

[node name="Label" type="Label" parent="."]
offset_left = -143.0
offset_top = -305.0
offset_right = -79.0
offset_bottom = -32.0
scale = Vector2(4.67677, 1.91762)
text = "-"
label_settings = SubResource("LabelSettings_1u5is")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(-5.02634, -1.85816)
collision_layer = 2147483648
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.20477, -49.9377)
rotation = -3.14159
scale = Vector2(41.2642, -28.416)
shape = SubResource("RectangleShape2D_ctckn")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
